--- a/.github/workflows/Update-Check.yaml
+++ b/.github/workflows/Update-Check.yaml
@@ -26,13 +26,19 @@ jobs:
 
       # Run a custom Node.js script
       - name: Run Update Checker
-        run: node Update[Payloader]/update-timer.js
+        run: node "Update[Payloader]/update-timer.js"
 
-      - name: Run Git add .
+      # Stage changes (git add)
+      - name: Stage changes
         run: git add .
 
-      - name: Run git commit
-      run: git commit -m "auto-update"
+      # Commit changes
+      - name: Commit changes
+        run: |
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "actions@github.com"
+          git commit -m "auto-update" || echo "No changes to commit"
 
-      - name: Run git push 
-      run: git push origin main
+      # Push changes
+      - name: Push changes
+        run: git push origin main
