--- a/.github/workflows/Update-Check.yaml
+++ b/.github/workflows/Update-Check.yaml
@@ -41,4 +41,6 @@ jobs:
 
       # Push changes
       - name: Push changes
+      env:
+          GH_TOKEN: ${{ secrets.key }}
         run: git push origin main
