--- a/.github/workflows/Update-Check.yaml
+++ b/.github/workflows/Update-Check.yaml
@@ -35,9 +35,7 @@ jobs:
       # Commit changes
       - name: Commit changes
         run: |
-          git config --global user.name "GitHub Actions Bot"
-          git config --global user.email "actions@github.com"
-          git commit -m "auto-update" || echo "No changes to commit"
+          git commit --allow-empty -m "auto-update" || echo "No changes to commit"
 
       # Push changes
       - name: Push changes
