--- a/.github/workflows/reset-count.yaml
+++ b/.github/workflows/reset-count.yaml
@@ -2,37 +2,49 @@ name: rest-update_count.txt[6h]
 
 on:
   schedule:
-    - cron: "0 0,6,12,18 * * *"   # 0,6,12,18 UTC
+    - cron: "0 0,6,12,18 * * *"   # Run at 00:00, 06:00, 12:00, 18:00 UTC
 
 jobs:
   run-node-script:
     runs-on: ubuntu-22.04
 
     steps:
-      # Check out the repository
+      # Step 1: Check out the repository
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      # Step 2: Set up Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18  
       
+      # Step 3: Install dependencies
       - name: Install Dependencies
         run: npm install
 
-      - name: run the script
-        run: node Update[Payloader]/reset_updatest[6h].js
+      # Step 4: Run the Node.js script
+      - name: Run the script
+        run: node "Update[Payloader]/reset_updatest[6h].js"
 
-      - name: add the changes
+      # Step 5: Configure Git identity
+      - name: Configure Git Identity
+        run: |
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "github-actions@github.com"
+
+      # Step 6: Stage changes
+      - name: Add the changes
         run: git add .
 
-      - name: commit the changes
+      # Step 7: Commit the changes
+      - name: Commit the changes
         run: git commit --allow-empty -m "Resetting Update[Payloader]\latest-updates[6h].txt file"
 
-      - name: push the changes
+      # Step 8: Push changes to the repository
+      - name: Push the changes
         env:
-          GH_TOKEN: ${{ secrets.key }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/TristanSimonDev/InfoProjekt-Website-Linux.git
           git push origin main
