--- a/.github/workflows/Update-Check.yaml
+++ b/.github/workflows/Update-Check.yaml
@@ -10,21 +10,19 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-      # Check out the repository
+
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Set up Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18  # Passe die Node.js-Version an deine Anforderungen an
-
-      # Install dependencies
+          node-version: 18  
+     
       - name: Install Dependencies
         run: npm install
 
-      # Run a custom Node.js script
+     
       - name: Run Update Checker
         run: node "Update[Payloader]/update-timer.js"
 
@@ -34,15 +32,12 @@ jobs:
           git config --global user.email "simontristandev@gmail.com"
 
 
-      # Stage changes (git add)
       - name: Stage changes
         run: git add .
 
-      # Commit changes
       - name: Commit changes
         run: git commit --allow-empty -m "auto-update" || echo "No changes to commit"
 
-      # Push changes
       - name: Push changes
         env:
           GH_TOKEN: ${{ secrets.key }}
